# pii-anonymizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pii-anonymizer.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml
e2e/: assert.py  expected.csv  spark.json  standalone.json  test-run.sh
pii_anonymizer/common/: config_validator.py  constants.py  file_utils.py  get_args.py
pii_anonymizer/common/analyze/: analyzer_result.py  filter_overlap_analysis.py  regex.py
pii_anonymizer/common/tests/: test_config_validator.py  test_file_utils.py
pii_anonymizer/key/: __main__.py
pii_anonymizer/spark/: __main__.py  main.py
pii_anonymizer/spark/acquire/: csv_parser.py  input_parser.py
pii_anonymizer/spark/anonymize/: anonymizer.py
pii_anonymizer/spark/report/: report_generator.py
pii_anonymizer/spark/write/: csv_writer.py  output_writer.py
pii_anonymizer/standalone/: __main__.py  dpf_main.py
pii_anonymizer/standalone/acquire/: csv_parser.py  input_parser.py
scripts/: run_tests.sh  test_data_gen.py
src/: constants.py  dpf_main.py
src/acquire/: csv_parser.py
src/acquire/tests/: test_csv_parser.py
src/anonymize/: anonymizer_result.py  drop_anonymizer.py
src/report/: report_generator.py
src/tests/: test_dpf_main.py
src/write/: csv_writer.py
src_spark/: main.py
src_spark/acquire/: csv_parser.py
src_spark/report/: report_generator.py
src_spark/write/: csv_writer.py
test_data/: comma_delimited_file.csv  missing_comma.csv  no_pii_data.csv  pipe_delimited_file.csv  test_data.csv  test_data.parquet  thai_id.csv
test_data/multiple_csv/: test_data_0.csv  test_data_1.csv
(+131 files in other folders)
