[tool.poetry]
name = "pii-anonymizer"
version = "0.1.0"
description = "Data Protection Framework is a python library/command line application for identification, anonymization and de-anonymization of Personally Identifiable Information data."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "~3.3.0"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
